Revision history for Games-Solitaire-Verify

0.1201  2013-06-28
        - Add $VERSION to some .pm files that missed it.
            - The PAUSE indexer warned about that.

0.1200  2013-06-28
        - Add support for flipped cards to ::Card .
        - Add lib/Games/Solitaire/Verify/KlondikeTalon.pm .
        - Add script/play-and-verify-klondike - it is a work-in-progress
        script used to play the solutions provided by
        https://github.com/ShootMe/KlondikeSolver (also see my fork of it
        at https://github.com/shlomif/KlondikeSolver ), verify them and
        display them in a more user-friendly manner.
        - Add t/cpan-changes.t

0.1103  2013-01-17
        - Update Build.PL (configure_requires + repository link).

0.1102  2012-09-10
        - Add lib/Games/Solitaire/Verify/App/CmdLine/Expand.pm to the
        distribution.
            - This caused script/expand-solitaire-multi-card-moves to
            fail.

0.1101  2012-09-07
        - Add strict, warnings and autodie to requires/build_requires.
            - See for example: http://www.cpantesters.org/cpan/report/52b7a6ba-f548-11e1-bdcc-373e3b6b8117

0.1100  2012-08-31
        - Add lib/Games/Solitaire/Verify/Solution/ExpandMultiCardMoves.pm
        for processing a solution and expanding multi-card (= column) moves
        into single-card moves, which are easier to validate by human players.
            - Now tested using t/08-expand-solution.t
            - Added script/expand-solitaire-multi-card-moves .

0.1001  2012-08-23
        - Add the color_for_suit method to ::Card .
        - Remove trailing space with t/style-trailing-space.t as a test.

0.1000  2011-11-08
        - Add the script/tag-release.pl to tag a release in Subversion.
        - Add script/bump-version-number.pl .
        - lib/Games/Solitaire/Verify/Card.pm :
            - Add the id() slot.
            - Add the data() slot.
        - lib/Games/Solitaire/Verify/State.pm :
            - Add the add_column method.