@@ -3,7 +3,7 @@ package Games::Solitaire::Verify::App::CmdLine;
 use strict;
 use warnings;
 
-use base 'Games::Solitaire::Verify::Base';
+use parent 'Games::Solitaire::Verify::Base';
 
 use Data::Dumper qw(Dumper);
 
