@@ -16,7 +16,7 @@ Version 0.01
 
 our $VERSION = '0.1200';
 
-use base 'Games::Solitaire::Verify::Base';
+use parent 'Games::Solitaire::Verify::Base';
 
 use Games::Solitaire::Verify::Exception;
 
