@@ -5,7 +5,7 @@ use warnings;
 
 require Games::Solitaire::Verify::VariantParams;
 
-use base 'Games::Solitaire::Verify::Base';
+use parent 'Games::Solitaire::Verify::Base';
 
 =head1 NAME
 
