@@ -3,6 +3,7 @@ Revision history for Games-Solitaire-Verify
 0.1201  2013-06-28
         - Add $VERSION to some .pm files that missed it.
             - The PAUSE indexer warned about that.
+        - Convert from 'use base' to 'use parent'.
 
 0.1200  2013-06-28
         - Add support for flipped cards to ::Card .
